--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
   "dependencies": {
     "ym": "0.0.6",
     "bem-xjst": "~0.2.3",
-    "bemhtml-compat": "~0.0.4"
+    "bemhtml-compat": "~0.0.4",
+    "bem-environ": "~1.1.0"
   },
   "devDependencies": {
     "bem": "0.6.x",
