--- a/package.json
+++ b/package.json
@@ -14,9 +14,7 @@
   "author": "Sergey Belov <peimei@ya.ru>",
   "license": "MIT",
   "dependencies": {
-    "ym": "0.0.8",
-    "bem-xjst": "~0.3.1",
-    "bemhtml-compat": "~0.0.4",
+    "bem-techs-core": "~0.1.0",
     "bem-environ": "~1.2.0"
   },
   "devDependencies": {
