--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "istanbul": "~0.2.6",
     "vow": "0.4.4",
     "enb": "0.13.4",
+    "enb-bem-i18n": "0.1.0",
     "enb-bem-docs": "0.1.4",
     "enb-bem-examples": "0.2.6",
     "enb-diverse-js": "0.1.0",
