--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "bower": "1.3.12",
     "istanbul": "~0.2.6",
     "vow": "0.4.4",
+    "reqf": "^1.0.0",
     "bem-naming": "0.3.0",
     "enb": "0.13.8",
     "enb-bem-techs": "0.1.0-rc",
